# mcp-server-template

./: .env.example  Dockerfile  README.md  claude_config.json  pyproject.toml
examples/: database_server.py  weather_server.py
src/: __main__.py  api_client.py  server.py
