[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-template"
version = "0.1.0"
description = "Production-ready MCP server template for AI agent tool access"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27.0",
    "mcp[cli]>=1.0.0",
]

[project.scripts]
my-mcp-server = "src.server:mcp.run"
